<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">StockKeeper</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for product quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Label for supplier 1 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_1">Staples</string>

    <!-- Label for supplier 2 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_2">Office Depot</string>

    <!-- Label for supplier 3 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_3">Barnes &amp; Noble</string>

    <!-- Label for supplier 4 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_4">Target</string>

    <!-- Label for supplier 5 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_5">InformIT</string>

    <!-- Label for supplier 6 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_6">Paper Source</string>

    <!-- Label for supplier 7 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_7">Maido</string>

    <!-- Label for supplier 8 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_8">Best Buy</string>

    <!-- Label for supplier 9 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_9">Office Max</string>

    <!-- Label for supplier 10 contact dropdown menu option [CHAR LIMIT=20] -->
    <string name="supplier_10">Booksmith</string>

    <!-- Label for supplier category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for product supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_name">Name of Supplier</string>

    <!-- Text hint for product supplier contact field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_contact">Supplier\'s email</string>

    <!-- Label for supplier's email category attribute in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_contact">Supplier\'s Email</string>

    <!-- Decrement product quantity button text -->
    <string name="product_decrease_quantity_label">-</string>

    <!-- Increment product quantity button text -->
    <string name="product_increase_quantity_label">+</string>

    <!-- Order more button text -->
    <string name="product_order_more_label">order more</string>

    <string name="product_decrease_button_negative">Product quantity cannot be less than zero</string>
    <string name="unsupported_insertion">Insertion is not supported for</string>
    <string name="insert_product_no_name">Product needs a description</string>
    <string name="insert_product_no_quantity">Quantity of product is required</string>
    <string name="insert_product_no_price">Product requires price</string>
    <string name="insert_product_no_supplier">Product requires a supplier</string>
    <string name="insert_product_no_supplier_contact">Product requires suppplier contact information</string>
    <string name="insert_failure">Failed to insert row for</string>
    <string name="delete_product_failure">Deletion is not supported for:</string>
    <string name="update_product_no_desc">Product requires a description</string>
    <string name="update_product_no_quantity">Product requires quantity</string>
    <string name="update_product_no_price">Product requires valid price information</string>
    <string name="update_product_no_supplier">Products requires supplier information</string>
    <string name="update_product_no_supplier_contact">Products requires supplier contact information</string>
    <string name="update_product_failure">Update is not supported for</string>
    <string name="editor_save_product_no_price">Price cannot be left blank!</string>
    <string name="hint_product_price">Price</string>
    <string name="catalog_desc_header">Description</string>
    <string name="catalog_quantity_header">Quantity</string>
    <string name="catalog_price_header">Price</string>
    <string name="provider_type_mismatch_part1">Unknown URI</string>
    <string name="provider_type_mismatch_part2">with match</string>
    <string name="list_item_qty_not_sufficient">Currently out of stock!</string>

    <!-- Text for empty view with instructions to the user on how to populate the database  -->
    <string name="user_instructions">
        No products to display.\n
        Press the below button enter new product information and save it to the database.
    </string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="product_fragment_title">Product Information</string>

    <!-- Subject for email to product supplier demanding more supplies [CHAR LIMIT=30] -->
    <string name="product_order_more_email_subject">Require Shipment</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="product_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="product_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="product_update_product_failed">Error with updating product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="product_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="product_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="product_delete_product_successful">Product deleted</string>

    <!-- Sell button for individual products displayed as a list -->
    <string name="list_item_sell_button">sold</string>

    <!-- Price label in list item view to tag the product price information [CHAR LIMIT=20] -->
    <string name="list_item_price_label">Price: $</string>

    <!-- Log message for multiple item update when single product content URI was provided -->
    <string name="list_item_sell_error">Multiple match for URI:</string>

    <!-- Toast message to the user when product image for existing product is added/edited [CHAR LIMIT=30] -->
    <string name="editor_product_image_update_success">Product image successfully updated</string>
    <string name="price">Price</string>
    <string name="product_image_cd">Product Image</string>
    <string name="product_camera_cd">button that opens mobile camera to capture product image</string>



    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home_log_in">HomeLogIn</string>
    <string name="title_activity_sub_menu">SubMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bt_alta_eventos">Alta</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="app_name">Kosmos</string>
    <string name="title_activity_login">Sign in</string>
    <string name="permisoIMG">Acceso a permisos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_log_in_ok">HomeLogInOk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home_log_in">HomeLogIn</string>
    <string name="title_activity_sub_menu">SubMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bt_alta_eventos">Alta</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="tvEmailAcceso">Correo</string>
    <string name="slider4_nosAdaptamos">Contáctanos y haremos el producto a medida.</string>
    <string name="slider4_nosAdaptamos2">!Para que ahorreis lo máximo posible!</string>
    <string name="slider3_scannerCamara">Métdo único y sencillo para localizar tus productos.</string>
    <string name="slider3_scannerCamara2">¡¡Escanea y Listo!!</string>
    <string name="slider2_gestiónClientes">Gestiona tus clientes de forma fácil e intuitiva</string>
    <string name="slider1_stockDescripcion">Gestionar el Stock de tu inventario más fácil que nunca.</string>
    <string name="nav_header_welcome">¡Bienvenido a Kosmos!</string>
</resources>
